--- a/Lab1/Views/Movies/Edit.cshtml
+++ b/Lab1/Views/Movies/Edit.cshtml
@@ -45,7 +45,10 @@
             @Html.EditorFor(model => model.Price)
             @Html.ValidationMessageFor(model => model.Price)
         </div>
-
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Rating)
+            @Html.ValidationMessageFor(model => model.Rating)
+        </div>
         <p>
             <input type="submit" value="Save" />
         </p>
